@@ -34,6 +34,7 @@ endif::[]
 shouldn't override with 500 - {pull}1103[#1103]
 * Exclude Quartz 1 from instrumentation to avoid
   `IncompatibleClassChangeError: Found class org.quartz.JobExecutionContext, but interface was expected` - {pull}1108[#1108]
+* Fix breakdown metrics span sub-types {pull}1113[#1113]
 
 
 [[release-notes-1.x]]
